...
    // MARK: - UI Elements

    private let titleLabel = DefaultStyleLabel(fontSize: 28,
                                               isBold: true,
                                               textAlignment: .center,
                                               textColor: .textOnFilledBackgroundColor)
    private let descriptionLabel = DefaultStyleLabel(fontSize: 16,
                                                     isBold: true,
                                                     textAlignment: .center,
                                                     textColor: .textOnFilledBackgroundColor)

    // MARK: - Properties

...
            $0.top.equalTo(titleLabel.snp.bottom).offset(Constants.StyleDefaults.outerPadding)
            $0.left.equalTo(titleLabel.snp.left)
            $0.right.equalTo(titleLabel.snp.right)
            $0.bottom.equalToSuperview().inset(Constants.StyleDefaults.outerPadding)
        }

        titleLabel.accessibilityIdentifier = "factTitleLabel"
        descriptionLabel.accessibilityIdentifier = "descriptionLabel"
    }

    func configure(withNumber number: Int, fact: String) {
        titleLabel.text = "\(number)"
        descriptionLabel.text = fact
...
