...
    private func configureTableView() {
        tableView.register(FactTableViewCell.self, forCellReuseIdentifier: FactTableViewCell.reuseIdentifier)
        tableView.rowHeight = UITableView.automaticDimension
        tableView.allowsSelection = false
        tableView.separatorStyle = .none
        tableView.prefetchDataSource = self
        tableView.accessibilityIdentifier = "factTableView"
    }

    private func configureNavigationBar() {
        let appearance = UINavigationBarAppearance()
        appearance.configureWithOpaqueBackground()
        appearance.backgroundColor = .mainFillColor
        appearance.shadowColor = .clear
        navigationController?.setNavigationBarHidden(false, animated: true)
        navigationController?.navigationBar.standardAppearance = appearance
        navigationController?.navigationBar.scrollEdgeAppearance = appearance
        navigationItem.hidesBackButton = true
        let backButton = UIBarButtonItem(image: Constants.Images.close.image,
                                         style: .plain,
                                         target: self,
                                         action: #selector(backButtonTapped))
        backButton.tintColor = .textOnFilledBackgroundColor
        navigationItem.rightBarButtonItem = backButton
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "backButton"
...
